basic wifi config

--- a/FloodPreventionSystem/platformio.ini
+++ b/FloodPreventionSystem/platformio.ini
@@ -8,7 +8,19 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+extra_configs = private_secrets.ini
+
 [env:nodemcu]
 platform = espressif8266
 board = nodemcu
 framework = arduino
+
+
+build_flags = 
+  -D WIFI_SSID=\"${secrets.WIFI_SSID}\"
+  -D WIFI_PASS=\"${secrets.WIFI_PASS}\"
+  
+
+lib_deps = 
+    ESP8266WiFi @ 1.0
