Added MQTT functionality

--- a/FloodPreventionSystem/platformio.ini
+++ b/FloodPreventionSystem/platformio.ini
@@ -17,10 +17,12 @@ board = nodemcu
 framework = arduino
 
 build_flags = 
-  -D WIFI_SSID=\"${secrets.WIFI_SSID}\"
-  -D WIFI_PASS=\"${secrets.WIFI_PASS}\"
+	-D WIFI_SSID=\"${secrets.WIFI_SSID}\"
+	-D WIFI_PASS=\"${secrets.WIFI_PASS}\"
+	-D BROKER_ADDRESS=\"${secrets.BROKER_ADDRESS}\"
+	-D PORT=${secrets.PORT}
 
 lib_deps = 
-    ESP8266WiFi @ 1.0
-    adafruit/Adafruit AHTX0 @ ^2.0.5
-    
+	ESP8266WiFi @ 1.0
+	adafruit/Adafruit AHTX0 @ ^2.0.5
+	knolleary/PubSubClient @ ^2.8
