--- a/FloodPreventionSystem/private_secrets_template.ini
+++ b/FloodPreventionSystem/private_secrets_template.ini
@@ -1,5 +1,6 @@
 [secrets]
 WIFI_SSID = "wifi name goes here"
 WIFI_PASS = "wifi password goes here"
-
+BROKER_ADDRESS = "broker url/ip address goes here"
+PORT = # port number goes here
 # Now rename this file private_secrets.ini
